<resources>
    <string name="app_name">Blue Cloud Journal</string>

    <!-- Menu Items -->
    <string name="m_home">Home Page</string>
    <string name="m_journal">Journals Page</string>
    <string name="m_goals">Goals Page</string>
    <string name="m_settings">Settings Page</string>

    <!-- Buttons -->
    <string name="btn_aj">Add New Journal</string>
    <string name="btn_new_activity">New Activity</string>
    <string name="btn_add_goal">Add New Goal</string>
    <string name="btn_save">Save</string>
    <string name="btn_delete">Delete</string>

    <!-- Home Page -->
    <string name="hp_title">Blue Cloud Journal</string>
    <string name="hp_mcmood">Most Common Mood:</string>
    <string name="hp_mrjournal">Most Recent Entry</string>

    <!-- Add Journal Page -->
    <string name="aj_title">New Journal</string>
    <string name="aj_mood_title">How was your day?</string>
    <string name="aj_activities_title">Activities:</string>
    <string name="aj_wwwell_title">What Went Well?</string>
    <string name="aj_wwwrong_title">What Went Wrong?</string>

    <string name="txt_suggest">Put your text here…</string>

    <!-- Add Goals Page -->
    <string name="ag_title">New Goal</string>
    <string name="amendg_title">Amend Goal</string>
    <string name="ag_goal_title">Goal Title:</string>
    <string name="ag_goal_desc">Goal Description</string>
    <string name="ag_goal_prog">Current Progress</string>
    <string name="ag_prog_current">0%</string>

    <!-- Add Activity Popup -->
    <string name="popup_add_activity">Add Activity</string>

    <!-- Journals Page -->
    <string name="jp_title">Journals</string>
    <string name="jp_sel_date">Select Date</string>

    <!-- Goals Page -->
    <string name="gp_title">Goals</string>

    <!-- Start-up Page / App instructions -->
    <string name="inst_title">Empty Journal!</string>
    <string name="inst_content">
        To get started with using your Blue Cloud Journal try the following:
    </string>
    <string name="inst_journal">1. Create a journal entry</string>
    <string name="inst_goal">2. Create a goal for yourself</string>
    <string name="inst_end">Hope you enjoy your journal experience!</string>

    <!-- Settings Page-->
    <string name="sp_notif">Notifications</string>
    <string name="sp_reminder">Daily Reminder: </string>

    <!-- Testing -->
    <string name="wipe">Wipe all data</string>
    <string name="add">Add test data</string>

</resources>