<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_app"
    tools:context=".AmendGoal">

    <TextView
        android:id="@+id/amendg_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:shadowColor="@color/colorTextShadow"
        android:shadowDx="0"
        android:shadowDy="5"
        android:shadowRadius="10"
        android:text="@string/amendg_title"
        android:textColor="@color/colorText"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <LinearLayout
        android:id="@+id/amgoaltitle_card"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/background_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/amendg_title">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/ag_goal_title"
            android:textColor="@color/colorText"
            android:textSize="24sp"
            android:textStyle="bold"
            />

        <EditText
            android:id="@+id/amend_goaltitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="5dp"
            android:textSize="16sp"
            android:hint="@string/txt_suggest"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/amgoaldesc_card"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/background_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/amgoaltitle_card">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/ag_goal_desc"
            android:textColor="@color/colorText"
            android:textSize="24sp"
            android:textStyle="bold"
            />

        <EditText
            android:id="@+id/amend_goaldesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="5dp"
            android:textSize="16sp"
            android:hint="@string/txt_suggest"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/amgoalprog_card"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/background_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/amgoaldesc_card">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/ag_goal_prog"
            android:textColor="@color/colorText"
            android:textSize="24sp"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/amend_tv_goal_prog"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:textColor="@color/colorText"
            android:text="@string/ag_prog_current"/>

        <SeekBar
            android:id="@+id/amend_progbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            />

    </LinearLayout>

    <Button
        android:id="@+id/btn_ag_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        android:background="@drawable/background_button"
        android:text="@string/btn_save"
        android:textStyle="bold"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/amgoalprog_card" />

    <Button
        android:id="@+id/btn_ag_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        android:background="@drawable/background_button"
        android:text="@string/btn_delete"
        android:textStyle="bold"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/btn_ag_save" />

</androidx.constraintlayout.widget.ConstraintLayout>